# templates

./: .editorconfig  README.md  flake.nix
pixi/: flake.nix
python/: .envrc  .gitignore  README.md  flake.nix  justfile  pyproject.toml
python/nix/: overlay.nix  pyproject-overrides.nix
